feat: add sound configuration and player settings; implement success and error sounds for commands; update player model for sound and private message preferences, added homes and killall command