@@ -27,12 +27,35 @@ public class PlayerManager {
         CompletableFuture.runAsync(() -> {
             try {
                 List<PlayerModel> result = Orbit.instance().database().query(PlayerModel.class, "uuid", player.getUniqueId());
-                PlayerModel model = result.isEmpty() ? new PlayerModel(player.getUniqueId(), player.getName()) : result.get(0);
+                PlayerModel model;
+                if (result.isEmpty()) {
+                    // Create new player with default settings from config
+                    model = new PlayerModel(
+                        player.getUniqueId(), 
+                        player.getName(),
+                        Orbit.instance().globalConfiguration().defaultSounds(),
+                        Orbit.instance().globalConfiguration().defaultPrivateMessages()
+                    );
+                } else {
+                    model = result.getFirst();
+                    // Update settings if they're null (for existing players)
+                    if (model.soundsEnabled() == null) {
+                        model.soundsEnabled(Orbit.instance().globalConfiguration().defaultSounds());
+                    }
+                    if (model.privateMessagesEnabled() == null) {
+                        model.privateMessagesEnabled(Orbit.instance().globalConfiguration().defaultPrivateMessages());
+                    }
+                }
                 players.put(player.getUniqueId(), model);
-                Orbit.instance().logger().info("Loaded data for player: " + player.getName());
+                Orbit.logger().info("Loaded data for player: " + player.getName());
             } catch (Exception e) {
-                Orbit.instance().logger().severe("Couldn't load player data for " + player.getName() + ": " + e.getMessage());
-                players.put(player.getUniqueId(), new PlayerModel(player.getUniqueId(), player.getName()));
+                Orbit.logger().severe("Couldn't load player data for " + player.getName() + ": " + e.getMessage());
+                players.put(player.getUniqueId(), new PlayerModel(
+                    player.getUniqueId(), 
+                    player.getName(),
+                    Orbit.instance().globalConfiguration().defaultSounds(),
+                    Orbit.instance().globalConfiguration().defaultPrivateMessages()
+                ));
             }
         }, Orbit.instance().database().getExecutorService());
     }
@@ -47,9 +70,9 @@ public class PlayerManager {
             CompletableFuture.runAsync(() -> {
                 try {
                     Orbit.instance().database().saveModel(model);
-                    Orbit.instance().logger().info("Saved data for player: " + player.getName());
+                    Orbit.logger().info("Saved data for player: " + player.getName());
                 } catch (Exception e) {
-                    Orbit.instance().logger().severe("Failed to save player data for " + player.getName() + ": " + e.getMessage());
+                    Orbit.logger().severe("Failed to save player data for " + player.getName() + ": " + e.getMessage());
                 }
             }, Orbit.instance().database().getExecutorService());
         }
@@ -61,12 +84,60 @@ public class PlayerManager {
                 players.clear();
                 List<PlayerModel> allPlayers = Orbit.instance().database().query(PlayerModel.class, null, null);
                 for (PlayerModel model : allPlayers) {
+                    // Update settings if they're null (for existing players)
+                    if (model.soundsEnabled() == null) {
+                        model.soundsEnabled(Orbit.instance().globalConfiguration().defaultSounds());
+                    }
+                    if (model.privateMessagesEnabled() == null) {
+                        model.privateMessagesEnabled(Orbit.instance().globalConfiguration().defaultPrivateMessages());
+                    }
                     players.put(model.uuid(), model);
                 }
-                Orbit.instance().logger().info("Loaded " + players.size() + " players!");
+                Orbit.logger().info("Loaded " + players.size() + " players!");
             } catch (Exception e) {
-                Orbit.instance().logger().severe("Couldn't load player models: " + e.getMessage());
+                Orbit.logger().severe("Couldn't load player models: " + e.getMessage());
             }
         }, Orbit.instance().database().getExecutorService());
+    }
+
+    // Player settings methods
+    public boolean isSoundsEnabled(UUID playerUuid) {
+        PlayerModel model = getPlayer(playerUuid);
+        return model != null && model.soundsEnabled() != null ? model.soundsEnabled() : Orbit.instance().globalConfiguration().defaultSounds();
+    }
+
+    public boolean isPrivateMessagesEnabled(UUID playerUuid) {
+        PlayerModel model = getPlayer(playerUuid);
+        return model != null && model.privateMessagesEnabled() != null ? model.privateMessagesEnabled() : Orbit.instance().globalConfiguration().defaultPrivateMessages();
+    }
+
+    public void setSoundsEnabled(UUID playerUuid, boolean enabled) {
+        PlayerModel model = getPlayer(playerUuid);
+        if (model != null) {
+            model.soundsEnabled(enabled);
+            // Save immediately
+            CompletableFuture.runAsync(() -> {
+                try {
+                    Orbit.instance().database().saveModel(model);
+                } catch (Exception e) {
+                    Orbit.logger().severe("Failed to save sounds setting for player " + playerUuid + ": " + e.getMessage());
+                }
+            }, Orbit.instance().database().getExecutorService());
+        }
+    }
+
+    public void setPrivateMessagesEnabled(UUID playerUuid, boolean enabled) {
+        PlayerModel model = getPlayer(playerUuid);
+        if (model != null) {
+            model.privateMessagesEnabled(enabled);
+            // Save immediately
+            CompletableFuture.runAsync(() -> {
+                try {
+                    Orbit.instance().database().saveModel(model);
+                } catch (Exception e) {
+                    Orbit.logger().severe("Failed to save private messages setting for player " + playerUuid + ": " + e.getMessage());
+                }
+            }, Orbit.instance().database().getExecutorService());
+        }
     }
 } 
